doc (webapp): Update readme to add required vm options to run the app.
Co-authored-by: Prakritijain11 <prakritipj@gmail.com>